# IAFOX

./: .gitignore  README.md  a  pyproject.toml  requirements.txt  start_cli.bat  start_web.bat
conhecimento/: LEIA-ME.txt
conhecimento/programacao/csharp/: fundamentos_csharp.md  multithreading_avancado.md  networking_sockets.md  processos_memoria.md  reflection_metaprogramacao.md  remote_desktop_completo.md  windows_hooks_api.md
iafox/: __init__.py
iafox/cli/: __init__.py  main.py
iafox/core/: __init__.py  agent.py  config.py
iafox/files/: __init__.py  manager.py
iafox/llm/: __init__.py  ollama_client.py
iafox/rag/: __init__.py  knowledge_base.py
iafox/tools/: __init__.py  web_search.py
iafox/tools/image/: __init__.py  comfyui_client.py  gerar_imagem.py
iafox/tools/rag/: __init__.py  buscar.py  indexar.py
iafox/utils/: __init__.py
iafox/web/: __init__.py  api.py
iafox/web/templates/: index.html
scripts/: install_windows.bat  install_windows.ps1
